# DVDRentalGraphql

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  database.py  security.py
app/graphql/: context.py  dataloaders.py  schema.py
app/graphql/filters/: actor_filter.py  customer_filter.py  film_filter.py  inventory_filter.py  payment_filter.py  rental_filter.py  shared.py
app/graphql/resolvers/: query.py
app/graphql/types/: catalog.py  common.py  film.py  geography.py  people.py  transactions.py
app/models/: models.py
tests/: conftest.py  test_auth.py  test_filters.py  test_schema.py
